# move-ls

./: .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
crates/move-language-server/: Cargo.toml  build.rs
crates/move-language-server/src/: config.rs  lsp_server.rs  main.rs  move_document.rs  salsa.rs  tree_sitter_move.rs
crates/move-language-server/src/node_resolver/: mod.rs
crates/move-language-server/src/queries/: use.scm
crates/move-language-server/src/salsa/: config_query.rs  move_ast_query.rs  syntax_tree_query.rs  text_source_query.rs
crates/move-language-server/src/tests/: mod.rs  resolver_test.rs
crates/semantic-tree-sitter/: Cargo.toml
crates/semantic-tree-sitter/src/: node_types.rs
editors/vscode/: README.md  language-configuration.json  package-lock.json  package.json  vsc-extension-quickstart.md
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: move.tmLanguage.json
src/: config.rs  error_diagnostic.rs  lib.rs  lsp_server.rs  main.rs  move_document.rs  salsa.rs  tree_sitter_move.rs  utils.rs
src/node_resolver/: mod.rs
src/tests/: mod.rs  resolver_test.rs
src/tests/cases/: use_query.move
