[workspace]
members = [
    "crates/move-language-server",
    "crates/semantic-tree-sitter"
]

[patch.crates-io]
# move-vm-state = {package = "move-vm-state", git = "https://github.com/move-hub/libra", branch = "movei"}
move-lang = {package = "move-lang", git = "https://github.com/move-hub/libra", branch = "movei"}
move-ir-types = {package = "move-ir-types", git = "https://github.com/move-hub/libra", branch = "movei"}
libra-types = {package="libra-types",  git = "https://github.com/move-hub/libra", branch = "movei"}
vm = {package="vm",  git = "https://github.com/move-hub/libra", branch = "movei"}
bytecode-verifier = {package="bytecode-verifier",  git = "https://github.com/move-hub/libra", branch = "movei"}
move-core-types = {package="move-core-types",  git = "https://github.com/move-hub/libra", branch = "movei"}
libra-crypto = {package="libra-crypto",  git = "https://github.com/move-hub/libra", branch = "movei"}
# move-vm-natives = {package="move-vm-natives",  git = "https://github.com/move-hub/libra", branch = "movei"}
datatest-stable = {package="datatest-stable",  git = "https://github.com/move-hub/libra", branch = "movei"}
movei-fmt = {package = "movei-fmt", git = "https://github.com/move-hub/movei", branch = "develop" }
tower-lsp = {package="tower-lsp",  git = "https://github.com/move-hub/tower-lsp", branch = "proposed-api"}
