[package]
name = "move-language-server"
version = "0.1.0"
authors = ["caojiafeng <funfriendcjf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
move-lang = "0.0.1"
move-ir-types = "0.1.0"
move-core-types = "0.1.0"


tower-lsp = "0.12"
ra_vfs = "0.6.1"
log = "0.4"
tokio = {version = "0.2", features = ["full"]}
serde = "1"
serde_json = "1"
parking_lot = "0.10"
dashmap = "3.11"
codespan = "0.8"
tree-sitter = "0.16"
anyhow = "1"
walkdir = "2.3"
xi-rope = "0.3"
salsa = "0.15"
futures = "0.3"
once_cell = "1.4"
env_logger = "0.7.1"
include_dir = "0.6.0"
uuid = {version = "0.8", features = ["v5"]}
itertools = "0.9"
movei-fmt = "0.1.0"

[build-dependencies]
cc = "1.0"
built = {version = "0.4", features=["git2", "chrono"]}
