[package]
name = "semantic-tree-sitter"
version = "0.1.0"
authors = ["caojiafeng <funfriendcjf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_json = "1"
tree-sitter = "0.16"
anyhow = "1"
